syntax = "proto3";

option go_package = "/protobuf";

package orders;

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (OrderSummary);
  rpc ListUserOrders(ListOrdersRequest) returns (ListOrdersResponse);
  rpc UpdateOrderStatus(UpdateStatusRequest) returns (UpdateStatusResponse);
}

message OrderItem {
  int64 product_id = 2;
  int64 quantity = 3;
  double price = 4;
}

message OrderSummary {
  int64 order_id = 1;
  int64 user_id = 2;
  repeated OrderItem items = 3;
  string status = 4;
}

message CreateOrderRequest {
  int64 user_id = 1;
  repeated OrderItem items = 2;
}

message CreateOrderResponse {
  int64 order_id = 1;
  string status = 2;
}

message GetOrderRequest {
  int64 order_id = 1;
}

message ListOrdersRequest {
  int64 user_id = 1;
}

message ListOrdersResponse {
  repeated OrderSummary orders = 1;
}

message UpdateStatusRequest {
  int64 order_id = 1;
  string status = 2;
}

message UpdateStatusResponse {
  int64 order_id = 1;
  string status = 2;
}